# neuro-review

./: README.md  secret.py  some_code.py  test_changes.txt
final_project/: .dockerignore  .env.test  .gitignore  Dockerfile  description.md  docker-compose.yaml  pyproject.toml  requirements.txt  run_app.py
final_project/src/: config.py  database.py  main.py
final_project/src/ai/: client.py  mock_client.py  prompt_template.txt
final_project/src/github/: client.py  webhook.py
final_project/src/review/: service.py
final_project/testing/: conftest.py  raw.py  run_tests.py  test_config.py  test_github_client.py  test_github_webhook.py  test_main.py  test_review_service.py  test_simple.py
presentation/: main.py
