[project]
name = "ai-code-reviewer-bot"
version = "0.1.0"
description = "AI-powered GitHub Pull Request reviewer bot"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-code-reviewer-bot"
Repository = "https://github.com/yourusername/ai-code-reviewer-bot.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "mypy>=1.5.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
    "jupyter>=1.0.0",
]
ml = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
]

[project.dependencies]
python = ">=3.11"
aiogram = ">=3.0.0"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
alembic = ">=1.12.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.0"
httpx = ">=0.25.0"
redis = ">=5.0.0"
celery = {version = ">=5.3.0", optional = true}
python-multipart = ">=0.0.6"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true